[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Ledger.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Notation/ledger_1_double.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Notation/ledger_3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Notation/ledger_2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Notation/ledger_1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Notation/ledger_3_double.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Notation/ledger_2_double.png" type="Texture" id=7]

[node name="Ledger" type="Position2D"]
script = ExtResource( 1 )

[node name="Ledger1" type="Sprite" parent="."]
position = Vector2( -32, 580 )
texture = ExtResource( 5 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 580, 94, 140 )

[node name="Ledger2" type="Sprite" parent="."]
position = Vector2( -32, 388 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 388, 94, 60 )

[node name="Ledger3" type="Sprite" parent="."]
position = Vector2( -32, 60 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 60, 94, 280 )

[node name="Ledger1Wide" type="Sprite" parent="."]
position = Vector2( -16, 580 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 580, 94, 140 )

[node name="Ledger2Wide" type="Sprite" parent="."]
position = Vector2( -16, 388 )
texture = ExtResource( 7 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 388, 94, 60 )

[node name="Ledger3Wide" type="Sprite" parent="."]
position = Vector2( -16, 60 )
texture = ExtResource( 6 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 60, 94, 280 )
